# tree-sitter-kon

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json  unimplemented.kon
bindings/c/: tree-sitter-kon.h  tree-sitter-kon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.cjs
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_kon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterKonTests/: TreeSitterKonTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: comments.txt  control-flow.txt  enums.txt  functions.txt  iteration.txt  lists.txt  loops.txt  maps.txt  matching.txt  member-access.txt  structs.txt  todo-list.kon  todo-sample.kon  variables.txt
