[package]
name = "tree-sitter-kon"
description = "Kon grammar for tree-sitter"
version = "0.1.0"
authors = ["akonwi"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "kon"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/akonwi/tree-sitter-kon"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
